--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,25 +14,18 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".ChatListActivity"
+            android:name=".ChatListActivityDir.ChatListActivity"
             android:exported="false" />
+
         <activity
-            android:name=".ChatActivity"
+            android:name=".ChatActivityDir.ChatActivity"
             android:exported="false" />
+
         <activity
-            android:name=".ChatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SearchActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SearchActivity"
+            android:name=".UserSearchActivityDir.SearchActivity"
             android:exported="false" />
         <activity
             android:name=".MenuActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MenuActivity2"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
